[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^2.0.0"
numpy = "^1.24.2"
pylint = "^2.17.2"
statsmodels = "^0.13.5"
nbformat = "^5.8.0"
nbclient = "^0.7.3"
plotnine = "^0.10.1"
tabulate = "^0.9.0"
scipy = ">=1.3,<1.9"
shiny = "^0.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
