[tool.poetry]
name = "logistic-app"
version = "0.1.0"
description = ""
authors = ["igor-sb <84479009+igor-sb@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "logistic_app"}]

[tool.poetry.dependencies]
python = "~3.10.10"
scipy = "^1.10.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
plotnine = "^0.10.1"
shiny = "^0.3.3"
rsconnect-python = "^1.16.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
